--- a/src/style/header/_header.scss
+++ b/src/style/header/_header.scss
@@ -57,6 +57,7 @@ header {
             font-size: $nav-size;
             font-weight: 400;
             font-size: .8rem;
+            transition: 0.5s;
 
             &:hover {
                 border-bottom: 3px solid $white-color;
