--- a/src/sys-user/signup-page/signup-page.css
+++ b/src/sys-user/signup-page/signup-page.css
@@ -126,6 +126,7 @@ header nav a {
   font-size: 1rem;
   font-weight: 400;
   font-size: 0.8rem;
+  transition: 0.5s;
 }
 header nav a:hover {
   border-bottom: 3px solid #ffffff;
