--- a/src/sys-user/getproduct-page/get-product.css
+++ b/src/sys-user/getproduct-page/get-product.css
@@ -219,6 +219,7 @@ main .container .product-cont .product .prod-img {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  cursor: pointer;
 }
 main .container .product-cont .product .p-name-price {
   display: flex;
@@ -288,4 +289,37 @@ main .container .product-cont .checkout button {
 main .container .product-cont .checkout button:hover {
   opacity: 80%;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+main .image-popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 99999;
+  background-color: rgba(0, 0, 0, 0.575);
+}
+main .image-popup .image-popup-form {
+  height: 100vh;
+  width: 400px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  background-color: #f2e5db;
+}
+main .image-popup .image-popup-form .update-popup-close {
+  border-radius: 100%;
+  border: none;
+  transition: 0.3s;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+main .image-popup .image-popup-form .update-popup-close:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+main .image-popup .image-popup-form .update-popup-close .display-image {
+  height: 80vh;
 }/*# sourceMappingURL=get-product.css.map */
