--- a/src/sys-user/home-page/userhome.css
+++ b/src/sys-user/home-page/userhome.css
@@ -171,6 +171,7 @@ main .container .product-cont .category button {
   margin-top: 10px;
   cursor: pointer;
   color: #a8896c;
+  transition: 0.3s;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 }
 main .container .product-cont .category button:hover {
