--- a/src/sys-user/home-page/userhome.scss
+++ b/src/sys-user/home-page/userhome.scss
@@ -27,6 +27,7 @@ main {
                     margin-top: 10px;
                     cursor: pointer;
                     color: $header-color;
+                    transition: 0.3s;
                     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 
                     &:hover {
